FunscriptSample: replace hello world port of ThreeJS example
http://threejs.org/examples/#canvas_camera_orthographic2

The cubes are black, need to fix that.

--- a/FunscriptSample/web/index.html
+++ b/FunscriptSample/web/index.html
@@ -6,6 +6,10 @@
 		<div id="#container">
 
 		</div>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/three.js/r69/three.js"></script>
+		<script src="/js/CombinedCamera.js"></script>
+		<script src="/js/Projector.js"></script>
+		<script src="/js/CanvasRenderer.js"></script>
 		<script language="javascript" src="app.js"></script>
 	</body>
 </html>
